[gd_scene load_steps=7 format=3 uid="uid://bkdyj32ktq7uk"]

[ext_resource type="Script" path="res://Scripts/end_block.gd" id="1_73ar7"]

[sub_resource type="Gradient" id="Gradient_1br6i"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vgurp"]
gradient = SubResource("Gradient_1br6i")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imp55"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbptb"]
size = Vector2(12, 30)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3qkhh"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="end_block" type="StaticBody2D"]
collision_layer = 64
script = ExtResource("1_73ar7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
scale = Vector2(0.0625, 16)
texture = SubResource("GradientTexture1D_vgurp")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_imp55")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_sbptb")
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_3qkhh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
